--- a/doubletonumber/doubletonumber.vcxproj
+++ b/doubletonumber/doubletonumber.vcxproj
@@ -110,7 +110,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClInclude Include="fp.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="free.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
