--- a/doubletonumber/doubletonumber.vcxproj.filters
+++ b/doubletonumber/doubletonumber.vcxproj.filters
@@ -15,7 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClInclude Include="fp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="free.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
