Partially implemented BigNum.

--- a/doubletonumber/doubletonumber.vcxproj
+++ b/doubletonumber/doubletonumber.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A6F84AC2-2EA4-48C6-A68C-503338DAD0D8}</ProjectGuid>
     <RootNamespace>doubletonumber</RootNamespace>
@@ -109,12 +112,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="fp.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="free.c" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
